# Universal-Life-Investment-Link-Cashflow-Illustration

./: .gitignore  Cargo.toml  README.md
src/: cashflows.rs  database.rs  enums.rs  helpers.rs  lib.rs  main.rs  structs.rs
src/cashflows/: base_cf.rs  helpers.rs
src/cashflows/base_cf/: fixed.rs  varied.rs
src/cashflows/test_data/: ilp_uvl_unified.xlsx  result_base_cf.csv  result_fixed.csv  result_varied.csv  uvl01_policy.json
src/database/: admin_chrg.rs  age_validation.rs  alloc_chrg_rate.rs  coi_rate.rs  extra_prem_rate.rs  int_rate.rs  juvenile_lien_rate.rs  lb_rate.rs  modal_factor.rs  prem_rate.rs  srr_chrg_rate.rs
src/database/csv/: age_validation.csv  gender.csv  int_rate_scenario.csv  modal_factor.csv  paymode.csv  product.csv  ul_acc_coi_rate.csv  ul_admin_chrg.csv  ul_alloc_chrg_rate.csv  ul_coi_rate.csv  ul_extra_prem_rate.csv  ul_int_rate.csv  ul_juvenile_lien_rate.csv  ul_lb_rate.csv  ul_prem_rate.csv  ul_srr_chrg_rate.csv
src/database/parquet/: age_validation.parquet  gender.parquet  int_rate_scenario.parquet  modal_factor.parquet  paymode.parquet  product.parquet  ul_acc_coi_rate.parquet  ul_admin_chrg.parquet  ul_alloc_chrg_rate.parquet  ul_coi_rate.parquet  ul_extra_prem_rate.parquet  ul_int_rate.parquet  ul_juvenile_lien_rate.parquet  ul_lb_rate.parquet  ul_prem_rate.parquet  ul_srr_chrg_rate.parquet
src/structs/: base.rs  fund_alloc.rs  helpers.rs  load.rs  people.rs  policy.rs  rider.rs  withdrawal.rs
