[package]
name = "si"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
garde = { version = "0.22.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
strum = "0.27.1"
strum_macros = "0.27.1"
polars = { version = "0.49.1", features = ["parquet", "json", "csv", "lazy", "dtype-struct"] }
serde_json = "1.0.140"
chrono = "0.4.41"
rand = "0.9.1"
rayon = "1.10.0"
approx = "0.5.1"
itertools = "0.14.0"
